[gd_scene load_steps=13 format=3 uid="uid://bk0ymc5sq4isa"]

[ext_resource type="Script" path="res://Scripts/complete_game.gd" id="1_i3ufp"]
[ext_resource type="Texture2D" uid="uid://crgouf6fg4kew" path="res://Assets/Others/Congratulations.png" id="2_6cv1v"]
[ext_resource type="Texture2D" uid="uid://bef0gqevc513" path="res://Assets/Others/Btn_Restart_Normal.png" id="3_weabh"]
[ext_resource type="Texture2D" uid="uid://b4p6b1u2gjplo" path="res://Assets/Others/Btn_Restart_Pressed.png" id="4_sucpx"]
[ext_resource type="Texture2D" uid="uid://bl35y1nkbpwai" path="res://Assets/Others/Btn_Restart_Hover.png" id="5_1gu20"]
[ext_resource type="Texture2D" uid="uid://b6fvk5o822g2" path="res://Assets/Others/Btn_Quit_Normal.png" id="6_tvk67"]
[ext_resource type="Texture2D" uid="uid://ckpi1st6yu2sb" path="res://Assets/Others/Btn_Quit_Pressed.png" id="7_3o1sn"]
[ext_resource type="Texture2D" uid="uid://cvmwwxcn7d54w" path="res://Assets/Others/Btn_Quit_Hover.png" id="8_32oxp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bwtx3"]

[sub_resource type="Animation" id="Animation_tar5y"]
resource_name = "Fade_In"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextureRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HBoxContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ube3h"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextureRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HBoxContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5dn7j"]
_data = {
"Fade_In": SubResource("Animation_tar5y"),
"RESET": SubResource("Animation_ube3h")
}

[node name="End_Game" type="Node2D"]
process_mode = 3
script = ExtResource("1_i3ufp")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 224.0
offset_bottom = 256.0
color = Color(0, 0, 0, 1)

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = 8.0
offset_top = 40.0
offset_right = 216.0
offset_bottom = 80.0
texture = ExtResource("2_6cv1v")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_left = 64.0
offset_top = 144.0
offset_right = 167.0
offset_bottom = 210.0
grow_horizontal = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Restart" type="TextureButton" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("3_weabh")
texture_pressed = ExtResource("4_sucpx")
texture_hover = ExtResource("5_1gu20")

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_bwtx3")

[node name="Quit" type="TextureButton" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("6_tvk67")
texture_pressed = ExtResource("7_3o1sn")
texture_hover = ExtResource("8_32oxp")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5dn7j")
}
autoplay = "Fade_In"

[connection signal="pressed" from="HBoxContainer/VBoxContainer/Restart" to="." method="on_restart_btn_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Quit" to="." method="on_quit_btn_pressed"]
